--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -1,1 +1,362 @@
-{}
+{
+  "app_desc": {
+    "message": "Bringe TweetDeck auf das nächste Level!"
+  },
+  "app_name": {
+    "message": "Better TweetDeck"
+  },
+  "settings_title": {
+    "message": "Better TweetDeck"
+  },
+  "settings_show_cards_inside_columns": {
+    "message": "Tweet-Karten innerhalb der Spalten anzeigen"
+  },
+  "settings_show_profile_badges_on_top_of_avatars": {
+    "message": "Profilabzeichen über den Avataren anzeigen"
+  },
+  "settings_collapse_read_dms": {
+    "message": "Gelesene Direktnachrichten einklappen"
+  },
+  "settings_freeze_gifs_in_profile_pictures": {
+    "message": "GIFs in Profilbildern anhalten"
+  },
+  "settings_remove_t_co_redirection_on_links": {
+    "message": "t.co-Weiterleitung auf Links entfernen"
+  },
+  "settings_make_buttons_smaller_in_the_composer": {
+    "message": "Buttons im Composer verkleinern"
+  },
+  "settings_reflect_new_tweets_and_dms_in_the_tabs_title": {
+    "message": "Neue Tweets und Direktnachrichten im Titel des Tabs anzeigen"
+  },
+  "settings_auto_switch_light_theme": {
+    "message": "Zum hellen Farbschema wechseln, wenn das Betriebssystem im hellen Modus ist"
+  },
+  "settings_scrollbar_default": {
+    "message": "Voreinstellung"
+  },
+  "settings_scrollbar_thin": {
+    "message": "Schmal"
+  },
+  "settings_scrollbar_hidden": {
+    "message": "Versteckt"
+  },
+  "settings_style_of_scrollbars": {
+    "message": "Stil der Scrollbalken"
+  },
+  "settings_show_clear_button_column": {
+    "message": "Zeige \"Löschen\"-Button im Spaltenkopf"
+  },
+  "settings_show_collapse_button_in_columns_header": {
+    "message": "Zeige \"Einklappen\"-Button im Spaltenkopf"
+  },
+  "settings_hide_icons_on_top_of_columns": {
+    "message": "Symbole nicht über Spalten anzeigen"
+  },
+  "settings_use_old_style_of_replies": {
+    "message": "Alten Antwortstil verwenden (inline @mentions)"
+  },
+  "settings_timestamp_relative": {
+    "message": "Relativ"
+  },
+  "settings_timestamp_custom": {
+    "message": "Benutzerdefiniert"
+  },
+  "settings_date_format": {
+    "message": "Datumsformat"
+  },
+  "settings_short_time_after_24h": {
+    "message": "Verwende ein anderes Datumsformat nach 24 Stunden"
+  },
+  "settings_timestamp_presets": {
+    "message": "Voreinstellungen"
+  },
+  "settings_timestamp_preset_absolute": {
+    "message": "Absolut"
+  },
+  "settings_timestamp_preset_absolute_us": {
+    "message": "Absolut (US-Stil)"
+  },
+  "settings_fullname_username": {
+    "message": "Vollständiger Name und Benutzername"
+  },
+  "settings_username_fullname": {
+    "message": "Benutzername und vollständiger Name"
+  },
+  "settings_username": {
+    "message": "Nur Benutzername"
+  },
+  "settings_fullname": {
+    "message": "Nur vollständiger Name"
+  },
+  "settings_name_display_style": {
+    "message": "Anzeigeformat für Namen"
+  },
+  "settings_general": {
+    "message": "Allgemeines"
+  },
+  "settings_theme": {
+    "message": "Farbschema"
+  },
+  "settings_tweets_display": {
+    "message": "Tweet-Anzeige"
+  },
+  "settings_tweet_actions": {
+    "message": "Tweet-Aktionen"
+  },
+  "settings_actions_visibility_always": {
+    "message": "Immer"
+  },
+  "settings_actions_visibility_on_hover": {
+    "message": "Wenn der Mauszeiger darauf zeigt"
+  },
+  "settings_actions_visibility": {
+    "message": "Sichtbare Aktionen"
+  },
+  "settings_position_of_actions": {
+    "message": "Position von Aktionen"
+  },
+  "settings_actions_position_left": {
+    "message": "Links"
+  },
+  "settings_actions_position_right": {
+    "message": "Rechts"
+  },
+  "settings_action_block_author": {
+    "message": "Autor blockieren"
+  },
+  "settings_action_mute_author": {
+    "message": "Autor stummschalten"
+  },
+  "settings_action_copy_media_links": {
+    "message": "Medienlinks kopieren"
+  },
+  "settings_action_download_media": {
+    "message": "Medien herunterladen"
+  },
+  "settings_additional_actions": {
+    "message": "Tweet-Aktionen hinzufügen"
+  },
+  "settings_downloaded_filename_format": {
+    "message": "Dateinamen für heruntergeladene Dateien"
+  },
+  "settings_filename_format_tokens": {
+    "message": "Formatierungsvorlagen für Dateinamen"
+  },
+  "settings_token_username_without": {
+    "message": "nutzername (ohne @)"
+  },
+  "settings_token_tweet_id": {
+    "message": "Tweet ID"
+  },
+  "settings_token_filename": {
+    "message": "Dateiname"
+  },
+  "settings_token_file_extension": {
+    "message": "Dateiendung"
+  },
+  "settings_token_year": {
+    "message": "Jahr"
+  },
+  "settings_token_day": {
+    "message": "Tag"
+  },
+  "settings_token_month": {
+    "message": "Monat"
+  },
+  "settings_token_minutes": {
+    "message": "Minuten"
+  },
+  "settings_token_seconds": {
+    "message": "Sekunden"
+  },
+  "settings_menu_item_mute_hashtags": {
+    "message": "Mute #hashtags"
+  },
+  "settings_menu_item_mute_source": {
+    "message": "Tweet Quelle muten"
+  },
+  "settings_menu_item_redraft": {
+    "message": "Neu Tweeten"
+  },
+  "settings_additional_tweet_menu_items": {
+    "message": "Zusätzliche Tweet-Menüeinträge"
+  },
+  "settings_replace_hearts_by_stars": {
+    "message": "Herzen durch Sterne ersetzen"
+  },
+  "settings_custom_css": {
+    "message": "Eigene CSS Regeln"
+  },
+  "settings_custom_css_warning": {
+    "message": "Das Einfügen von unbekanntem Code hier kann zu Problemen führen, wenn du nicht weißt was dieser bedeutet"
+  },
+  "settings_avatar_shape": {
+    "message": "Avatarform"
+  },
+  "settings_save": {
+    "message": "Speichern"
+  },
+  "settings_use_original_aspect_ratio_images": {
+    "message": "Einzelne Bilder im ursprünglichen Seitenverhältnis anzeigen (nur bei mittleren und großen Bildern)"
+  },
+  "settings_show_delete_button_in_columns_header": {
+    "message": "\"Löschen\"-Button in der Spaltenüberschrift anzeigen"
+  },
+  "settings_section_settings": {
+    "message": "Einstellungen"
+  },
+  "settings_support": {
+    "message": "Unterstützung"
+  },
+  "settings_avatar_square": {
+    "message": "Quadratisch"
+  },
+  "settings_avatar_circle": {
+    "message": "Rund"
+  },
+  "settings_display_modern_fullscreen_images": {
+    "message": "Bilder im Vollbild Stil von Twitter.com anzeigen"
+  },
+  "settings_browser_and_extension_informations": {
+    "message": "Browser- und Erweiterungsinformationen"
+  },
+  "settings_version": {
+    "message": "Version:"
+  },
+  "settings_user_agent": {
+    "message": "User Agent:"
+  },
+  "settings_export_settings": {
+    "message": "Einstellungen exportieren"
+  },
+  "settings_export_settings_copy": {
+    "message": "Benutze den Download Button um deine Einstellungen zu exportieren"
+  },
+  "settings_download_settings_button": {
+    "message": "Einstellungen herunterladen"
+  },
+  "settings_import_settings": {
+    "message": "Einstellungen importieren"
+  },
+  "settings_import_settings_copy": {
+    "message": "Einstellungen aus einer JSON-Datei importieren"
+  },
+  "settings_import_json_wrong_keys": {
+    "message": "Die Datei entspricht nicht dem benötigten Format von Better TweetDeck"
+  },
+  "settings_import_success": {
+    "message": "Einstellungen importiert. Speichern nicht vergessen!"
+  },
+  "settings_imported_settings_summary": {
+    "message": "Klicke hier, um die importierten Einstellungen zu sehen"
+  },
+  "settings_website": {
+    "message": "Webseite"
+  },
+  "settings_links": {
+    "message": "Links"
+  },
+  "settings_footer_label": {
+    "message": "TweetDeck muss neu geladen werden, damit die Änderungen wirksam werden!"
+  },
+  "settings_show_account_picker_like": {
+    "message": "Kontoauswahl beim Liken eines Tweets anzeigen"
+  },
+  "settings_accent_color": {
+    "message": "Akzentfarbe"
+  },
+  "settings_misc": {
+    "message": "Sonstige"
+  },
+  "settings_meta": {
+    "message": "Meta"
+  },
+  "settings_import_export": {
+    "message": "Import / Export"
+  },
+  "settings_columns": {
+    "message": "Spalten"
+  },
+  "settings_tweet_content": {
+    "message": "Tweet Inhalt"
+  },
+  "settings_pause_column_scrolling_on_hover": {
+    "message": "Scrollen einer Zeile anhalten beim Überfliegen mit der Maus"
+  },
+  "settings_use_a_custom_width_for_columns": {
+    "message": "Eigene Spaltenbreite verwenden"
+  },
+  "settings_width_any_valid_css_value": {
+    "message": "Breite (CSS Syntax beachten)"
+  },
+  "settings_share_on_tweetdeck": {
+    "message": "Auf TweetDeck teilen"
+  },
+  "settings_enable_share_item": {
+    "message": "Einen \"Auf TweetDeck teilen\" Eintrag im Browser Kontextmenü anzeigen"
+  },
+  "settings_shorten_the_shared_text": {
+    "message": "Den geteilten Text kürzen"
+  },
+  "settings_contextual_menu": {
+    "message": "Kontextmenü"
+  },
+  "settings_dark_theme": {
+    "message": "Dunkel"
+  },
+  "settings_old_gray": {
+    "message": "Old Gray"
+  },
+  "settings_super_black": {
+    "message": "Super Black"
+  },
+  "settings_light": {
+    "message": "Light"
+  },
+  "settings_tokens_list": {
+    "message": "Tokenliste"
+  },
+  "settings_make_emoji_bigger_in_tweets": {
+    "message": "Emojis in Tweets vergrößern"
+  },
+  "settings_add_search_columns_first_in_the_list": {
+    "message": "Suchspalten zuerst in der Liste anzeigen"
+  },
+  "settings_save_tweeted_hashtags": {
+    "message": "Getweetete Hashtags speichern"
+  },
+  "settings_changelog": {
+    "message": "Änderungsverlauf"
+  },
+  "settings_chrome_web_store": {
+    "message": "Chrome Web Store"
+  },
+  "settings_bugs_or_suggestions": {
+    "message": "Bugs oder Vorschläge"
+  },
+  "settings_source_on_github": {
+    "message": "Quellcode auf GitHub"
+  },
+  "settings_contributors": {
+    "message": "Unterstützer"
+  },
+  "settings_author": {
+    "message": "Autor"
+  },
+  "settings_credits_about": {
+    "message": "Credits / Über"
+  },
+  "settings_always_characters_left": {
+    "message": "Immer die verbleibenden Zeichen beim schreiben eines Tweets anzeigen"
+  },
+  "settings_better_tweetdeck_ask_tabs": {
+    "message": "Better TweetDeck braucht für diese Funktion die Berechtigung zum Zugriff auf geöffnete Tabs"
+  },
+  "settings_show_like_rt_indicators_on_top_of_tweets": {
+    "message": "Like/Retweet Buttons über Tweets anzeigen"
+  },
+  "settings_do_the_same_for_single_images_in_quoted_tweets": {
+    "message": "auch für einzelne Bilder in zitierten Tweets"
+  }
+}
