--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -54,7 +54,7 @@
     "message": "カラムのアイコンを表示しない"
   },
   "settings_use_old_style_of_replies": {
-    "message": "古いスタイルのリプライ(@メンションを入れて返信)を使う"
+    "message": "古いスタイルのリプライ (@メンションを入れて返信) を使う"
   },
   "settings_timestamp_relative": {
     "message": "相対表示"
@@ -174,10 +174,10 @@
     "message": "#ハッシュタグ をミュート"
   },
   "settings_menu_item_mute_source": {
-    "message": "viaをミュート (例:Twitter for Androidなど)"
+    "message": "viaをミュート (例: Twitter for Androidなど)"
   },
   "settings_menu_item_redraft": {
-    "message": "再投稿(Re-draft)"
+    "message": "再投稿 (Re-draft)"
   },
   "settings_additional_tweet_menu_items": {
     "message": "追加のメニュー項目"
@@ -210,10 +210,10 @@
     "message": "サポート"
   },
   "settings_avatar_square": {
-    "message": "しかく"
+    "message": "四角"
   },
   "settings_avatar_circle": {
-    "message": "まる"
+    "message": "丸"
   },
   "settings_display_modern_fullscreen_images": {
     "message": "Twitter Webのようにフルスクリーンで画像を表示"
