--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -466,5 +466,8 @@
   },
   "settings_extract_pronouns": {
     "message": "Extract pronouns from users' biography or location and show them within columns"
+  },
+  "settings_separate_tweet_and_quote_tweet_actions": {
+    "message": "Separate tweet and quote tweet buttons"
   }
 }
