--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -343,5 +343,8 @@
   },
   "settings_do_the_same_for_single_images_in_quoted_tweets": {
     "message": "引用ツイートに含まれる単一の画像も同様に表示する"
+  },
+  "settings_action_follow_author": {
+    "message": "投稿者をフォロー"
   }
 }
