--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -263,6 +263,9 @@
   "settings_show_account_picker_like": {
     "message": "Show account picker when clicking on the like button"
   },
+  "settings_show_account_picker_follow": {
+    "message": "Show account picker when clicking on the added follow button"
+  },
   "settings_accent_color": {
     "message": "Accent color"
   },
