--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -349,5 +349,47 @@
   },
   "settings_do_the_same_for_single_images_in_quoted_tweets": {
     "message": "Do the same for single images in quoted tweets"
+  },
+  "settings_default_dark_theme": {
+    "message": "Default"
+  },
+  "settings_custom_dark_theme": {
+    "message": "Dark theme"
+  },
+  "settings_tweet_composer": {
+    "message": "Tweet composer"
+  },
+  "settings_show_the_emoji_picker": {
+    "message": "Show the emoji picker"
+  },
+  "settings_enable_emoji_autocompletion": {
+    "message": "Enable emoji autocompletion using :shortcodes:"
+  },
+  "settings_enable_the_gif_button": {
+    "message": "Enable the GIF button"
+  },
+  "settings_also_show_cards_in_columns_with_small_media_size": {
+    "message": "Also show cards in columns with Small media size"
+  },
+  "settings_looking_for_inspiration": {
+    "message": "Looking for inspiration?"
+  },
+  "settings_check_the_collection_of_css_snippets": {
+    "message": "Check the collection of CSS snippets"
+  },
+  "settings_css_compress_warning": {
+    "message": "The CSS in the editor will be compressed in order to save space towards your browser's\n        storage quota. Meaning some indentation or white space will be removed."
+  },
+  "settings_backup_warning": {
+    "message": "Don't forget to keep backups of your work in another place!"
+  },
+  "settings_usernames_like_picker_allowlist": {
+    "message": "Comma separated list of usernames for which the picker should show (leave empty to always show)"
+  },
+  "settings_override_translation_language": {
+    "message": "Use a specific language when translating tweets"
+  },
+  "settings_default_browsers_language": {
+    "message": "Default (browser's language)"
   }
 }
