Move the setting `addFollowAction` into the "follow action" block.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -396,7 +396,7 @@
     "message": "Default (browser's language)"
   },
   "settings_action_follow_author": {
-    "message": "Follow author"
+    "message": "Add action to follow author"
   },
   "settings_follow_actions": {
     "message": "Follow action"
