--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -391,5 +391,11 @@
   },
   "settings_default_browsers_language": {
     "message": "Default (browser's language)"
+  },
+  "settings_logo_variation": {
+    "message": "Logo variation"
+  },
+  "settings_default": {
+    "message": "Default"
   }
 }
