--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -263,6 +263,9 @@
   "settings_show_account_picker_like": {
     "message": "Show account picker when clicking on the like button"
   },
+  "settings_show_account_picker_follow": {
+    "message": "Show account picker when clicking on the follow button"
+  },
   "settings_accent_color": {
     "message": "Accent color"
   },
@@ -391,5 +394,14 @@
   },
   "settings_default_browsers_language": {
     "message": "Default (browser's language)"
+  },
+  "settings_action_follow_author": {
+    "message": "Add action to follow author"
+  },
+  "settings_follow_actions": {
+    "message": "Follow action"
+  },
+  "settings_show_followers_count": {
+    "message": "Show the number of followers next to the follow icon"
   }
 }
