--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -263,6 +263,9 @@
   "settings_show_account_picker_like": {
     "message": "「いいね」を押したときにアカウント選択画面を開く"
   },
+  "settings_show_account_picker_follow": {
+    "message": "「フォロー」を押したときにアカウント選択画面を開く"
+  },
   "settings_accent_color": {
     "message": "アクセントカラー"
   },
@@ -350,6 +353,9 @@
   "settings_do_the_same_for_single_images_in_quoted_tweets": {
     "message": "引用ツイートに含まれる単一の画像も同様に表示する"
   },
+  "settings_action_follow_author": {
+    "message": "投稿者をフォローするアクションを追加"
+  },
   "settings_default_dark_theme": {
     "message": "デフォルト"
   },
@@ -391,5 +397,11 @@
   },
   "settings_default_browsers_language": {
     "message": "デフォルト (ブラウザの言語)"
+  },
+  "settings_follow_actions": {
+    "message": "フォローアクション"
+  },
+  "settings_show_followers_count": {
+    "message": "フォローアイコンの隣にフォロワー数を表示する"
   }
 }
