add a new tweet content section

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -433,5 +433,8 @@
   },
   "settings_show_content_warnings": {
     "message": "Show content warnings for appropriately marked tweets"
+  },
+  "settings_images": {
+    "message": "Images"
   }
 }
