--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -436,5 +436,8 @@
   },
   "settings_images": {
     "message": "Images"
+  },
+  "settings_collapse_unread_dms": {
+    "message": "Also collapse unread DMs"
   }
 }
